Figured out mismatched html style elements issue. Now using two overlapping strings

--- a/src/index.css
+++ b/src/index.css
@@ -65,10 +65,27 @@ section {
   text-decoration: underline yellow;
 } */
 
+
+
+
+div.puzzle-display {
+  position: relative;
+}
+
+.bottom {
+  position: absolute;
+  top: 0px; left: 0px;
+}
+
+.top {
+  position: absolute;
+  top: 0px; left: 0px;
+}
+
 .highlight-one {
   text-decoration: underline yellow;
 }
 
 .highlight-two {
-  color: orange;
+  color: red;
 }
